CLIENT-277: fixed double scrolls

--- a/src/modules/app/less/app.less
+++ b/src/modules/app/less/app.less
@@ -4,8 +4,7 @@ html,
 body {
   width: 100%;
   height: 100%;
-  min-width: 1024px;
-  min-height: 768px;
+  min-height: 300px;
   overflow: auto;
   background-color: @color-background-default;
 }
