--- a/src/modules/create/less/create.less
+++ b/src/modules/create/less/create.less
@@ -1,5 +1,7 @@
 .create {
-  padding-top: 90px;
+  > ui-view[name="main"] {
+    padding-top: 90px;
+  }
 
   .md-dialog-container {
     background-color: rgba(0, 0, 0, 0.7);
